--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# VS Code
+*.code-workspace
+
+# MACOS
+.DS_Store
+
 # PyCharm
 #   JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #   be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
